--- a/Ibraeva_Bermet_hw28_10potok/index.html
+++ b/Ibraeva_Bermet_hw28_10potok/index.html
@@ -270,7 +270,7 @@
                                 <div class="tooltip bg_green">
                                     <span>New</span>
                                 </div>
-                                <img src="img/Product/product1/img1.jpg" alt="img1 class="image">
+                                <img src="img/Product/product1/img1.jpg" alt="img1" class="image">
 
                                 <div class="quick">
                                     <span class="view">
