--- a/Ibraeva_Bermet_hw28_10potok/index.html
+++ b/Ibraeva_Bermet_hw28_10potok/index.html
@@ -329,7 +329,7 @@
                                 <div class="tooltip bg_orange">
                                     <span>-25%</span>
                                 </div>
-                                <img src="img/Product/product2/img2.jpg" alt="img2">
+                                <img src="img/Product/product2/img2.jpg" alt="img2" class="image">
 
                                 <div class="quick">
                                     <span class="view">
@@ -384,7 +384,7 @@
 
                         <div class="product">
                             <div class="img">
-                                <img src="img/Product/product3/img3.jpg" alt="img3">
+                                <img src="img/Product/product3/img3.jpg" alt="img3" class="image">
 
                                 <div class="desc_img">
                                     <div class="desc">
@@ -440,7 +440,7 @@
 
                         <div class="product">
                             <div class="img">
-                                <img src="img/Product/product4/img4.jpg" alt="img4">
+                                <img src="img/Product/product4/img4.jpg" alt="img4" class="image">
 
                                 <div class="quick">
                                     <span class="view">
@@ -498,7 +498,7 @@
                                 <div class="tooltip bg_orange">
                                     <span>New</span>
                                 </div>
-                                <img src="img/Product/product1/img1.jpg" alt="img1">
+                                <img src="img/Product/product1/img1.jpg" alt="img1" class="image">
 
                                 <div class="quick">
                                     <span class="view">
